app/globals.css
/* @import "tailwindcss"; */

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  overflow: hidden;
}

ul ul li:nth-child(1) {
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

li{
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 19px;
  text-align: justify;
}

h1{
  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
  font-size: 20px;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  text-align: left;
}

h4{
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  text-align: left;
}
.my-container{
  margin-top: 2rem;
}
p{
  font-size: 20px;
}
@media only screen and (max-width: 600px) {
  .my-container{
    margin-right: 2rem;
  }
  body{
    overflow: auto;
  }
  p{
    font-size: 18px;
  }
}
@media only screen and (max-width: 800px) {
  .my-container{
    overflow: auto;
    margin-right: 2rem;
  }
}

